--- a/SwiftEvents/Base.lproj/Main.storyboard
+++ b/SwiftEvents/Base.lproj/Main.storyboard
@@ -279,11 +279,16 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="New Event" id="wZr-F0-5Dk">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="ML5-b6-A7C"/>
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="ML5-b6-A7C">
+                            <connections>
+                                <segue destination="vBE-7I-P9v" kind="unwind" unwindAction="updateIntervalWithSegue:" id="bAS-Je-Oq8"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Add" id="UBH-gx-dTM"/>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cD8-fx-wnd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="vBE-7I-P9v" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3131" y="1979"/>
         </scene>
