--- a/SwiftEvents/KeypadView.xib
+++ b/SwiftEvents/KeypadView.xib
@@ -11,7 +11,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeypadView" customModule="SwiftEvents" customModuleProvider="target">
             <connections>
+                <outlet property="amButton" destination="hfZ-Dg-83V" id="EzB-SR-MGc"/>
+                <outlet property="amPmStack" destination="y9j-hy-VJ6" id="64o-C5-6jA"/>
+                <outlet property="backButton" destination="eVa-fl-P0u" id="EzO-8P-PeK"/>
+                <outlet property="clearButton" destination="aFW-wb-77W" id="WnY-EL-StL"/>
+                <outlet property="eightButton" destination="EZG-du-NJ0" id="rES-ti-rN7"/>
+                <outlet property="fiveButton" destination="24w-2a-lvn" id="GCK-Rw-mmZ"/>
+                <outlet property="fourButton" destination="gyB-Bu-W0A" id="O5S-Bz-a4u"/>
+                <outlet property="labelView" destination="RT2-R1-xVX" id="DPy-uE-Yod"/>
+                <outlet property="nineButton" destination="WXB-yV-wsh" id="PeT-2J-LpX"/>
+                <outlet property="oneButton" destination="ecy-3M-g69" id="du2-b6-1gj"/>
+                <outlet property="pmButton" destination="Qfk-HY-ptR" id="81z-1H-MrT"/>
+                <outlet property="sevenButton" destination="f5W-d5-mqL" id="0sA-ZG-1bB"/>
+                <outlet property="sixButton" destination="1vn-hl-CPe" id="OSC-gg-yv0"/>
+                <outlet property="submitButton" destination="lNv-MO-0Us" id="XEg-wl-YQF"/>
+                <outlet property="threeButton" destination="GAZ-zi-xce" id="WFc-ps-IAB"/>
+                <outlet property="twoButton" destination="0p9-RQ-Gqr" id="7rY-ge-Ndy"/>
                 <outlet property="view" destination="iN0-l3-epB" id="f1Z-w7-RrO"/>
+                <outlet property="zeroButton" destination="E62-GC-7YU" id="2pW-ca-pYR"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,101 +36,101 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zdT-Mi-7Q6">
-                    <rect key="frame" x="0.0" y="20" width="138" height="171"/>
+                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zdT-Mi-7Q6">
+                    <rect key="frame" x="16" y="8" width="226" height="251"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RT2-R1-xVX">
-                            <rect key="frame" x="0.0" y="0.0" width="138" height="20.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="226" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="G7n-Sn-sDK">
-                            <rect key="frame" x="0.0" y="20.5" width="138" height="120"/>
+                        <stackView opaque="NO" tag="1" contentMode="scaleToFill" ambiguous="YES" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="roi-sE-uVf">
+                            <rect key="frame" x="0.0" y="36.5" width="226" height="168"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Cs2-fb-NCY">
-                                    <rect key="frame" x="0.0" y="0.0" width="108" height="120"/>
+                                <stackView opaque="NO" tag="2" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Cs2-fb-NCY">
+                                    <rect key="frame" x="0.0" y="0.0" width="172" height="168"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ChV-B6-nja">
-                                            <rect key="frame" x="0.0" y="0.0" width="108" height="30"/>
+                                        <stackView opaque="NO" tag="3" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="ChV-B6-nja">
+                                            <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecy-3M-g69">
+                                                <button opaque="NO" tag="1" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecy-3M-g69">
                                                     <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="1"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0p9-RQ-Gqr">
-                                                    <rect key="frame" x="36" y="0.0" width="36" height="30"/>
+                                                <button opaque="NO" tag="2" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0p9-RQ-Gqr">
+                                                    <rect key="frame" x="68" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="2"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAZ-zi-xce">
-                                                    <rect key="frame" x="72" y="0.0" width="36" height="30"/>
+                                                <button opaque="NO" tag="3" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAZ-zi-xce">
+                                                    <rect key="frame" x="136" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="3"/>
                                                 </button>
                                             </subviews>
                                         </stackView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="FAY-Bk-tNJ">
-                                            <rect key="frame" x="0.0" y="30" width="108" height="30"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="FAY-Bk-tNJ">
+                                            <rect key="frame" x="0.0" y="46" width="172" height="30"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gyB-Bu-W0A">
                                                     <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="4"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="24w-2a-lvn">
-                                                    <rect key="frame" x="36" y="0.0" width="36" height="30"/>
+                                                    <rect key="frame" x="68" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="5"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1vn-hl-CPe">
-                                                    <rect key="frame" x="72" y="0.0" width="36" height="30"/>
+                                                    <rect key="frame" x="136" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="6"/>
                                                 </button>
                                             </subviews>
                                         </stackView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="NRI-kq-ucB">
-                                            <rect key="frame" x="0.0" y="60" width="108" height="30"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="NRI-kq-ucB">
+                                            <rect key="frame" x="0.0" y="92" width="172" height="30"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f5W-d5-mqL">
                                                     <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="7"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZG-du-NJ0">
-                                                    <rect key="frame" x="36" y="0.0" width="36" height="30"/>
+                                                    <rect key="frame" x="68" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="8"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WXB-yV-wsh">
-                                                    <rect key="frame" x="72" y="0.0" width="36" height="30"/>
+                                                    <rect key="frame" x="136" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="9"/>
                                                 </button>
                                             </subviews>
                                         </stackView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GlN-BF-iyT">
-                                            <rect key="frame" x="0.0" y="90" width="108" height="30"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="GlN-BF-iyT">
+                                            <rect key="frame" x="0.0" y="138" width="172" height="30"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVa-fl-P0u">
                                                     <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="Back"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E62-GC-7YU">
-                                                    <rect key="frame" x="36" y="0.0" width="36" height="30"/>
+                                                    <rect key="frame" x="68" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="0"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aFW-wb-77W">
-                                                    <rect key="frame" x="72" y="0.0" width="36" height="30"/>
+                                                    <rect key="frame" x="136" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="Clear"/>
                                                 </button>
                                             </subviews>
                                         </stackView>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7eC-HX-58g">
-                                    <rect key="frame" x="108" y="0.0" width="30" height="60"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="y9j-hy-VJ6">
+                                    <rect key="frame" x="196" y="0.0" width="30" height="168"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfZ-Dg-83V">
-                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="30" height="84"/>
                                             <state key="normal" title="AM"/>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qfk-HY-ptR">
-                                            <rect key="frame" x="0.0" y="30" width="30" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="25" verticalHuggingPriority="251" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qfk-HY-ptR">
+                                            <rect key="frame" x="0.0" y="84" width="30" height="84"/>
                                             <state key="normal" title="PM"/>
                                         </button>
                                     </subviews>
@@ -121,7 +138,7 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lNv-MO-0Us">
-                            <rect key="frame" x="0.0" y="140.5" width="138" height="30"/>
+                            <rect key="frame" x="0.0" y="220.5" width="226" height="30"/>
                             <state key="normal" title="Submit"/>
                         </button>
                     </subviews>
@@ -129,6 +146,7 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-358" y="47"/>
         </view>
     </objects>
 </document>
